--- a/Aes128_CMac_Dll/Aes128_CMac_Dll.vcxproj.filters
+++ b/Aes128_CMac_Dll/Aes128_CMac_Dll.vcxproj.filters
@@ -21,6 +21,18 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="aes.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="cmac.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="claa_base.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Aes128_CMac_Dll.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -30,6 +42,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="aes.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="cmac.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
